--- a/style.css
+++ b/style.css
@@ -9,11 +9,22 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 80px;
+  justify-content: center;
+}
+button{
+  padding: 10px 60px;
+  font-size: 18px;
+  display: none;
+}
+#tableau{
+  display: flex;
   gap: 20px;
   flex-flow: wrap;
   justify-content: center;
   align-items: center;
-
 }
 body{
   width: 100%;
