--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
-h1{
-  color: red;
+h2 {
+  text-align: center;
+}
+
+.circle-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  background-color: #3498db;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+}
+
+.circle:nth-child(1) {
+  transform: rotate(0deg) translate(100px) rotate(0deg);
+}
+
+.circle:nth-child(2) {
+  transform: rotate(90deg) translate(100px) rotate(-90deg);
+}
+
+.circle:nth-child(3) {
+  transform: rotate(180deg) translate(100px) rotate(180deg);
+}
+
+.circle:nth-child(4) {
+  transform: rotate(270deg) translate(100px) rotate(-270deg);
 }
