--- a/style.css
+++ b/style.css
@@ -11,29 +11,13 @@ h2 {
 }
 
 .circle {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   background-color: #3498db;
   color: white;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-}
-
-.circle:nth-child(1) {
-  transform: rotate(0deg) translate(100px) rotate(0deg);
-}
-
-.circle:nth-child(2) {
-  transform: rotate(90deg) translate(100px) rotate(-90deg);
-}
-
-.circle:nth-child(3) {
-  transform: rotate(180deg) translate(100px) rotate(180deg);
-}
-
-.circle:nth-child(4) {
-  transform: rotate(270deg) translate(100px) rotate(-270deg);
+  font-size: 25px;
 }
