--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h2 {
   text-align: center;
 }
 
-.circle-container {
+#circle-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -20,4 +20,6 @@ h2 {
   align-items: center;
   justify-content: center;
   font-size: 25px;
+  border: none;
+  cursor: pointer;
 }
