--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+
+@font-face {
+  font-family: 'Space Invaders';
+  src: url('../fonts/space_invaders.ttf') format('truetype');
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  font-family: 'Space Invaders' ,sans-serif;
+}
+
 .card{
   width: 150px;
   display: flex;
@@ -7,15 +20,22 @@
   background-size: 100%;
   background-repeat: no-repeat;
 }
+body {
+  background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #073940 50%, #1a1a1a 70%, #000000 100%);
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
 
 #grid-container{
   width: 100%;
   height: 100%;
   display: flex;
-  flex-flow: column;
-  align-items: center;
-  gap: 80px;
   justify-content: center;
+ 
 }
 button{
   padding: 10px 60px;
@@ -23,13 +43,46 @@ button{
   display: none;
 }
 #tableau{
-  display: flex;
   gap: 20px;
-  flex-flow: wrap;
   justify-content: center;
   align-items: center;
+  flex-flow: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 20px;
+  align-items: center;
 }
-body{
-  width: 100%;
-  height: 100%;
+
+fieldset {
+  color:white
+}
+
+h1{
+  color: white;
+  text-transform: uppercase;
+}
+#chooseNumberOfPairs{
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 20px 25px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 100%;
+  background-color: grey;
+}
+.title h2{
+  color: white;
+  ;
+}
+
+.pairs{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+.circle{
+  display: flex;
+  gap: 30px;
 }
