👌 IMPROVE: refactoring code with functions +++

--- a/style.css
+++ b/style.css
@@ -11,6 +11,28 @@
   font-family: 'Space Invaders' ,sans-serif;
 }
 
+.choose{
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+span.choosePairsNumber {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px; 
+  height: 60px; 
+  background-color: #007bff; 
+  color: #fff; 
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+/* Ajoutez ces styles pour changer la couleur de fond lors du survol */
+span.choosePairsNumber:hover {
+  background-color: #0056b3; /* Couleur de fond au survol */
+}
+
 .card{
   width: 150px;
   display: flex;
@@ -35,6 +57,8 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-flow: column;
  
 }
 button{
@@ -51,38 +75,16 @@ button{
   grid-template-columns: repeat(4, 1fr); 
   gap: 20px;
   align-items: center;
+  margin: 20px 0;
 }
 
-fieldset {
-  color:white
-}
 
 h1{
   color: white;
   text-transform: uppercase;
-}
-#chooseNumberOfPairs{
-  color: white;
-  font-size: 20px;
-  cursor: pointer;
-  padding: 20px 25px;
-  font-size: 16px;
-  font-weight: 600;
-  border-radius: 100%;
-  background-color: grey;
 }
 .title h2{
   color: white;
   ;
 }
 
-.pairs{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column;
-}
-.circle{
-  display: flex;
-  gap: 30px;
-}
