--- a/style.css
+++ b/style.css
@@ -97,9 +97,6 @@ table th, table td{
   background-repeat: no-repeat;
 }
 body {
-  background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #073940 50%, #1a1a1a 70%, #000000 100%);
-  background-size: cover;
-  background-attachment: fixed;
   display: flex;
   flex-flow: column;
   justify-content: center;
@@ -107,6 +104,57 @@ body {
   position: relative;
   width: 100%;
 }
+
+.animated-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Assurez-vous que le fond animé soit en arrière-plan */
+  pointer-events: none; /* Évitez d'interférer avec le contenu de la page */
+  overflow: hidden;
+}
+
+.gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  animation: backgroundAnimation 5s linear infinite;
+  z-index: -1;
+  opacity: 0;
+}
+
+
+@keyframes backgroundAnimation {
+  0% {
+      opacity: 0;
+  }
+  10%, 90% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+  }
+}
+
+.gradient:nth-child(1) {
+  background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #073940 50%, #1a1a1a 70%, #000000 100%);
+  animation-delay: 0s;
+}
+
+.gradient:nth-child(2) {
+  background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #001f3f 50%, #1a1a1a 70%, #000000 100%);
+  animation-delay: 2.5s; 
+}
+
+.gradient:nth-child(3) {
+  background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #073940 50%, #1a1a1a 70%, #000000 100%);
+  animation-delay: 5s;
+}
+
 
 #grid-container{
   width: 100%;
