--- a/style2.css
+++ b/style2.css
@@ -1,156 +1,201 @@
-
 @font-face {
-    font-family: 'Space Invaders';
-    src: url('../fonts/space_invaders.ttf') format('truetype');
+  font-family: 'Space Invaders';
+  src: url('../fonts/space_invaders.ttf') format('truetype');
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  font-family: 'Space Invaders' ,sans-serif;
+}
+
+
+aside{
+  display: flex;
+  gap: 50px;
+  color: white;
+  flex-flow: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 250px;
+  font-size: 15px;
+}
+
+.scoreboard:hover{
+  background: #08383F;
+  cursor: pointer;
+}
+.choose{
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+span.choosePairsNumber {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px; 
+  height: 60px; 
+  background-color: #08383F; 
+  border: 1px solid #fff;
+  color: #fff; 
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+/* Ajoutez ces styles pour changer la couleur de fond lors du survol */
+span.choosePairsNumber:hover {
+  background-color: #0056b3; /* Couleur de fond au survol */
+}
+
+table th, table td{
+  border: 1px solid white;
+  padding: 8px;
+  background: #073940;
+}
+
+.modal{
+  color: white;
+  width: 60%;
+  position: relative;
+  display: none;
+}
+.modal.active{
+  display: block;
+}
+.closeButton{
+  position: absolute;
+  top: 0;
+  right: 6%;
+  padding: 15px;
+  cursor: pointer;
+  background: #073940;
+  border: 1px solid white;
+  width: 25px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 25px;
+}
+.modal table{
+  width:80%;
+  margin: 0 auto;
+}
+
+.card{
+  width: 150px;
+  display: flex;
+  height: 200px;
+  cursor: pointer;
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+body {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+}
+
+.animated-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Assurez-vous que le fond animé soit en arrière-plan */
+  pointer-events: none; /* Évitez d'interférer avec le contenu de la page */
+  overflow: hidden;
+}
+
+.gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  animation: backgroundAnimation 5s linear infinite;
+  z-index: -1;
+  opacity: 0;
+}
+
+
+@keyframes backgroundAnimation {
+  0% {
+      opacity: 0;
   }
-  
-  *, *::before, *::after {
-    box-sizing: border-box;
-    overflow-y: hidden;
-    overflow-x: hidden;
-    font-family: 'Space Invaders' ,sans-serif;
+  10%, 90% {
+      opacity: 1;
   }
-  
-  
-  aside{
-    display: flex;
-    gap: 50px;
-    color: white;
-    flex-flow: column;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 250px;
-    font-size: 15px;
+  100% {
+      opacity: 0;
   }
-  
-  .scoreboard:hover{
-    background: #08383F;
-    cursor: pointer;
-  }
-  .choose{
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-  }
-  span.choosePairsNumber {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60px; 
-    height: 60px; 
-    background-color: #08383F; 
-    border: 1px solid #fff;
-    color: #fff; 
-    border-radius: 100%;
-    cursor: pointer;
-  }
-  
-  /* Ajoutez ces styles pour changer la couleur de fond lors du survol */
-  span.choosePairsNumber:hover {
-    background-color: #0056b3; /* Couleur de fond au survol */
-  }
-  
-  table th, table td{
-    border: 1px solid white;
-    padding: 8px;
-    background: #073940;
-  }
-  
-  .modal{
-    color: white;
-    width: 60%;
-    position: relative;
-    display: none;
-  }
-  .modal.active{
-    display: block;
-  }
-  .closeButton{
-    position: absolute;
-    top: 0;
-    right: 6%;
-    padding: 15px;
-    cursor: pointer;
-    background: #073940;
-    border: 1px solid white;
-    width: 25px;
-    font-size: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 25px;
-  }
-  .modal table{
-    width:80%;
-    margin: 0 auto;
-  }
-  
-  .card{
-    width: 150px;
-    display: flex;
-    height: 200px;
-    cursor: pointer;
-    background-position: center;
-    background-size: 100%;
-    background-repeat: no-repeat;
-  }
-  body {
-    background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #073940 50%, #1a1a1a 70%, #000000 100%);
-    background-size: cover;
-    background-attachment: fixed;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    width: 100%;
-  }
-  
-  #grid-container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column;
-   
-  }
-  button{
-    padding: 10px 60px;
-    font-size: 18px;
-    display: none;
-  }
-  #tableau{
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    flex-flow: wrap;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); 
-    gap: 20px;
-    align-items: center;
-    margin: 20px 0;
-  }
-  .titlePlay{
-    display: flex;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column;
-    margin: 20px 0;
-    display: none;
-  }
-  
-  
-  h1{
-    color: white;
-    text-transform: uppercase;
-  }
-  .title h2{
-    color: white;
-    ;
-  }
-  
-  
+}
+
+.gradient:nth-child(1) {
+  background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #073940 50%, #1a1a1a 70%, #000000 100%);
+  animation-delay: 0s;
+}
+
+.gradient:nth-child(2) {
+  background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #001f3f 50%, #1a1a1a 70%, #000000 100%);
+  animation-delay: 2.5s; 
+}
+
+.gradient:nth-child(3) {
+  background: radial-gradient(ellipse at center, #000000 0%, #1a1a1a 30%, #073940 50%, #1a1a1a 70%, #000000 100%);
+  animation-delay: 5s;
+}
+
+
+#grid-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+ 
+}
+button{
+  padding: 10px 60px;
+  font-size: 18px;
+  display: none;
+}
+#tableau{
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 20px;
+  align-items: center;
+  margin: 20px 0;
+}
+.titlePlay{
+  display: flex;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  margin: 20px 0;
+  display: none;
+}
+
+
+h1{
+  color: white;
+  text-transform: uppercase;
+}
+.title h2{
+  color: white;
+  ;
+}
