--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   src: url('../fonts/space_invaders.ttf') format('truetype');
 }
 
+
 #backPage{
   background: #073940;
   color: white;
@@ -23,10 +24,34 @@ body{
   flex-flow: column;
   align-items: center;
   justify-content: center;
-  height: 60vh;
+  height: 80vh;
   position: relative;
 }
+.title h1{
+  font-size: 75px;
+  margin-bottom: 0;
+}
 
+.background{
+  background-image: url('./assets/backgroundHero.jpg');
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.overlay {
+  position: fixed;
+  top: 40%; 
+  left: 0;
+  width: 100%;
+  height: 60%; 
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)); 
+  z-index: 0; 
+  pointer-events: none; 
+}
 *, *::before, *::after {
   box-sizing: border-box;
   overflow-y: hidden;
@@ -40,8 +65,8 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Assurez-vous que le fond animé soit en arrière-plan */
-  pointer-events: none; /* Évitez d'interférer avec le contenu de la page */
+  z-index: -1; 
+  pointer-events: none; 
   overflow: hidden;
 }
 
@@ -99,11 +124,27 @@ form{
   align-items: center;
   gap: 30px;
 }
-form button, input{
+form, input{
   width: 300px;
   padding: 5px 30px;
 }
-form button:hover, input:focus, input[type=submit]:hover{
+h4{
+  font-size: 20px;
+}
+.mode{
+  background:#073940 ;
+  width: 250px;
+  height: 60px;
+  color: white;
+  border: none;
+}
+
+.mode:hover{
+  background-color: azure;
+  color: #073940;
+  transition: all 0.3s ease-in-out;
+}
+input:focus, input[type=submit]:hover{
   background-color: #1a1a1a;
   color: white;
   border: 1px solid white;
